--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ python:
 before_install:
   - wget https://repo.anaconda.com/archive/Anaconda2-5.3.1-Linux-x86_64.sh -O conda.sh
   - chmod a+x conda.sh
-  - ./conda.sh -b
+  - travis_wait ./conda.sh -b
   - export PATH=/home/travis/anaconda2/bin:$PATH
-  - conda update --yes conda
+  - travis_wait conda update --yes conda
 
 install:
   - conda create --yes -n hc27 python=$TRAVIS_PYTHON_VERSION
