--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 install:
   - conda create --yes -n hc27 python=$TRAVIS_PYTHON_VERSION
   - source activate hc27
-  - pip install -r requirements.txt
+  - travis_wait pip install -r requirements.txt
 
 script:
   - cd examples && ./start_example.sh
