--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: c
 sudo: required
+services:
+  -postgresql
+
+addons:
+  postgresql: "11"
+  apt:
+    packages:
+    - postgresql-11
+    - postgresql-client-11
 
 before_install:
   - wget https://repo.anaconda.com/archive/Anaconda2-5.3.1-Linux-x86_64.sh -O anaconda.sh
@@ -12,7 +21,13 @@ install:
   - conda create --yes -n hc27 python=$TRAVIS_PYTHON_VERSION
   - source activate hc27
   - travis_wait pip install -r requirements.txt
-  - apt-get install postgresql postgresql-contrib
+
+before_script:
+  - psql -c 'create database holo;' -U postgres
+  - psql -c 'CREATE USER holocleanuser;' -U postgres
+  - psql -c 'ALTER USER holo WITH PASSWORD 'abcd1234';' -U postgres
+  - psql -c 'GRANT ALL PRIVILEGES ON DATABASE holo TO holocleanuser;' -U postgres
+  - psql -c holo 'ALTER SCHEMA public OWNER TO holo;' -U postgres
 
 script:
   - cd examples && ./start_example.sh
