--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: c
 sudo: required
-services:
-  -postgresql
 
 addons:
-  postgresql: "11"
-  apt:
-    packages:
-    - postgresql-11
+  postgresql: "9.4"
+  # apt:
+  #   packages:
+  #   - postgresql-11
 
 before_install:
   - wget https://repo.anaconda.com/archive/Anaconda2-5.3.1-Linux-x86_64.sh -O anaconda.sh
