--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   - conda create --yes -n hc27 python=2.7
   - source activate hc27
   - travis_wait pip install -r requirements.txt
+  - pip install google-compute-engine
 
 before_script:
   - psql -U postgres -c 'create database holo;'
