--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
-language: c
+language: generic
 sudo: required
 
 addons:
   postgresql: "9.4"
-  # apt:
-  #   packages:
-  #   - postgresql-11
 
 before_install:
   - wget https://repo.anaconda.com/archive/Anaconda2-5.3.1-Linux-x86_64.sh -O anaconda.sh
@@ -18,6 +15,7 @@ install:
   - conda create --yes -n hc27 python=2.7
   - source activate hc27
   - travis_wait pip install -r requirements.txt
+  # The following command is required when running on travis.
   - pip install google-compute-engine
 
 before_script:
